# SimpleLLama

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colcon.pkg  package.xml
bindings/ros2/: simplellama_node.cpp
example/ros2_demo/: ros2_demo.cpp
example/simple_text_demo/: simple_text_demo.cpp
src/: simplellama.cpp  simplellama.hpp
